@startuml
package "Service" {
    class TripService {
        - enturClient: EnturClient
        + TripService(EnturClient enturClient)
        + getTrip(TripRequest request) : TripResponse
    }
}

package "DTO" {
    class TripRequest
    class TripResponse
}

TripService ..> TripRequest : uses
TripService ..> TripResponse : returns
@enduml

